fixing css appearance on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@
     font-size: 20px;
     padding-bottom: 25px;
     font-weight: 900;
+    padding-top: 25px;;
 }
 
 /* Random Word */
